foundation-objs/main/default/objects/Contact/fields/Attended_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Attended_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Webinar</label>
    <type>Checkbox</type>
</CustomField>