foundation-objs/main/default/objects/Contact/fields/Calling_Status__c.field-meta.xml
<CustomField>
    <fullName>Calling_Status__c</fullName>
    <label>Calling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calling_Status</valueSetName>
    </valueSet>
</CustomField>