foundation-objs/main/default/objects/Contact/fields/Dealdesk_Demo_Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealdesk_Demo_Reschedule_Date__c</fullName>
    <label>Dealdesk_Demo Reschedule Date</label>
    <type>Date</type>
</CustomField>