foundation-objs/main/default/objects/Contact/fields/DealDesk_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>DealDesk_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DealDesk_Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>