foundation-objs/main/default/objects/Contact/fields/Demo_scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_scheduled_Date__c</fullName>
    <label>Demo scheduled Date</label>
    <type>DateTime</type>
</CustomField>