foundation-objs/main/default/objects/Contact/fields/Demo_status__c.field-meta.xml
<CustomField>
    <fullName>Demo_status__c</fullName>
    <label>Demo status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Done</fullName>
            </value>
            <value>
                <fullName>Demo rescheduled</fullName>
            </value>
            <value>
                <fullName>Customer No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>