foundation-objs/main/default/objects/Contact/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>