foundation-objs/main/default/objects/Contact/fields/Email_ID_Personal__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_Personal__c</fullName>
    <label>Email ID (Personal)</label>
    <type>Email</type>
</CustomField>