foundation-objs/main/default/objects/Contact/fields/first_conversion_event_name_c__c.field-meta.xml
<CustomField>
    <fullName>first_conversion_event_name_c__c</fullName>
    <label>First Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>