foundation-objs/main/default/objects/Contact/fields/High_priority__c.field-meta.xml
<CustomField>
    <fullName>High_priority__c</fullName>
    <label>High priority?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>