foundation-objs/main/default/objects/Contact/fields/hs_analytics_last_url__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_last_url__c</fullName>
    <label>Last Page Seen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>