foundation-objs/main/default/objects/Contact/fields/hs_analytics_source_data_2__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source_data_2__c</fullName>
    <label>Original Source Drill-Down 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>