foundation-objs/main/default/objects/Contact/fields/hs_latest_source__c.field-meta.xml
<CustomField>
    <fullName>hs_latest_source__c</fullName>
    <label>Latest Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>