foundation-objs/main/default/objects/Contact/fields/hs_latest_source_data_1__c.field-meta.xml
<CustomField>
    <fullName>hs_latest_source_data_1__c</fullName>
    <label>Latest Source Drill-Down 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>