foundation-objs/main/default/objects/Contact/fields/hs_lifecyclestage_marketingqualifiedle__c.field-meta.xml
<CustomField>
    <fullName>hs_lifecyclestage_marketingqualifiedle__c</fullName>
    <label>Became a Marketing Qualified Lead Date</label>
    <type>DateTime</type>
</CustomField>