foundation-objs/main/default/objects/Contact/fields/hs_lifecyclestage_salesqualifiedlead_d__c.field-meta.xml
<CustomField>
    <fullName>hs_lifecyclestage_salesqualifiedlead_d__c</fullName>
    <label>Became a Sales Qualified Lead Date</label>
    <type>DateTime</type>
</CustomField>