foundation-objs/main/default/objects/Contact/fields/hs_lifecyclestage_subscriber_date__c.field-meta.xml
<CustomField>
    <fullName>hs_lifecyclestage_subscriber_date__c</fullName>
    <label>Became a Subscriber Date</label>
    <type>DateTime</type>
</CustomField>