foundation-objs/main/default/objects/Contact/fields/hubspotscore__c.field-meta.xml
<CustomField>
    <fullName>hubspotscore__c</fullName>
    <label>HubSpot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>