foundation-objs/main/default/objects/Contact/fields/Is_a_User__c.field-meta.xml
<CustomField>
    <fullName>Is_a_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a User ?</label>
    <type>Checkbox</type>
</CustomField>