foundation-objs/main/default/objects/Contact/fields/ISD__c.field-meta.xml
<CustomField>
    <fullName>ISD__c</fullName>
    <label>ISD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>