foundation-objs/main/default/objects/Contact/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Tally</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>GST Support Desk</fullName>
            </value>
            <value>
                <fullName>Instapage</fullName>
            </value>
            <value>
                <fullName>CA Referral</fullName>
            </value>
            <value>
                <fullName>Email (Marketing + Landing Page)</fullName>
                <isActive>false</isActive>
                <label>Email (Marketing + Landing Page)</label>
            </value>
            <value>
                <fullName>Inbound Mail</fullName>
                <isActive>false</isActive>
                <label>Inbound Mail</label>
            </value>
            <value>
                <fullName>Product Sign Up</fullName>
                <isActive>false</isActive>
                <label>Product Sign Up</label>
            </value>
            <value>
                <fullName>Sales Drip Campaign</fullName>
                <isActive>false</isActive>
                <label>Sales Drip Campaign</label>
            </value>
            <value>
                <fullName>Tally Self Serve (Organic)</fullName>
                <isActive>false</isActive>
                <label>Tally Self Serve (Organic)</label>
            </value>
            <value>
                <fullName>Tally Self Serve (Paid)</fullName>
                <isActive>false</isActive>
                <label>Tally Self Serve (Paid)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>