foundation-objs/main/default/objects/Contact/fields/lead_sub_source_drill_down_1__c.field-meta.xml
<CustomField>
    <fullName>lead_sub_source_drill_down_1__c</fullName>
    <label>Lead Sub Source Drill Down -1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>