foundation-objs/main/default/objects/Contact/fields/No_of_Demos_completed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Demos_completed__c</fullName>
    <label>No. of Demos completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>