foundation-objs/main/default/objects/Contact/fields/No_of_Demos_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>No_of_Demos_Scheduled__c</fullName>
    <label>No. of Demos Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>