foundation-objs/main/default/objects/Contact/fields/notes_last_contacted__c.field-meta.xml
<CustomField>
    <fullName>notes_last_contacted__c</fullName>
    <label>Last Contacted</label>
    <type>DateTime</type>
</CustomField>