foundation-objs/main/default/objects/Contact/fields/notes_last_updated__c.field-meta.xml
<CustomField>
    <fullName>notes_last_updated__c</fullName>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>