foundation-objs/main/default/objects/Contact/fields/notes_next_activity_date__c.field-meta.xml
<CustomField>
    <fullName>notes_next_activity_date__c</fullName>
    <label>Next Activity Date</label>
    <type>DateTime</type>
</CustomField>