foundation-objs/main/default/objects/Contact/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>ASP/GSP</fullName>
            </value>
            <value>
                <fullName>EINV</fullName>
            </value>
            <value>
                <fullName>E-Way Bill</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>GSP APIs</fullName>
            </value>
            <value>
                <fullName>EINV + EWB</fullName>
            </value>
            <value>
                <fullName>Max ITC</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>