foundation-objs/main/default/objects/Contact/fields/product_interested_in__c.field-meta.xml
<CustomField>
    <fullName>product_interested_in__c</fullName>
    <label>Product Interested In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>