foundation-objs/main/default/objects/Contact/fields/Product_Usage_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Family__c</fullName>
    <label>Product Usage Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASP/GSP</fullName>
            </value>
            <value>
                <fullName>EINV/EWB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>