foundation-objs/main/default/objects/Contact/fields/Products_Interested__c.field-meta.xml
<CustomField>
    <fullName>Products_Interested__c</fullName>
    <label>Products Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Module</valueSetName>
    </valueSet>
</CustomField>