foundation-objs/main/default/objects/Contact/fields/recent_conversion_date__c.field-meta.xml
<CustomField>
    <fullName>recent_conversion_date__c</fullName>
    <label>Recent Conversion Date</label>
    <type>DateTime</type>
</CustomField>