foundation-objs/main/default/objects/Contact/fields/recent_conversion_event_name__c.field-meta.xml
<CustomField>
    <fullName>recent_conversion_event_name__c</fullName>
    <label>Recent Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>