foundation-objs/main/default/objects/Contact/fields/Requested_For_Demo__c.field-meta.xml
<CustomField>
    <fullName>Requested_For_Demo__c</fullName>
    <label>Requested For Demo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>