foundation-objs/main/default/objects/Contact/fields/Send_communication_to_this_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_communication_to_this_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send communication to this Contact?</label>
    <type>Checkbox</type>
</CustomField>