foundation-objs/main/default/objects/Contact/fields/seniority__c.field-meta.xml
<CustomField>
    <fullName>seniority__c</fullName>
    <label>seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Seniority</valueSetName>
    </valueSet>
</CustomField>