foundation-objs/main/default/objects/Contact/fields/Tag_Category__c.field-meta.xml
<CustomField>
    <fullName>Tag_Category__c</fullName>
    <label>Tag(Category)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>