foundation-objs/main/default/objects/Contact/fields/Webinar_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Attendance__c</fullName>
    <label>Webinar Attendance (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>