foundation-objs/main/default/objects/Contact/fields/Webinar_Attendance_in_min__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Attendance_in_min__c</fullName>
    <label>Webinar Attendance (in min)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>