foundation-objs/main/default/objects/Contact/validationRules/Blank_Contact_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Contact_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(MobilePhone) &amp;&amp; ISBLANK(Phone) &amp;&amp; ISBLANK(Email) &amp;&amp; ISBLANK(Email_ID_Personal__c)</errorConditionFormula>
    <errorMessage>Please enter one of the following : Email ID (Personal) or Email or Primary Mobile or Alternate Mobile</errorMessage>
</ValidationRule>