foundation-objs/main/default/objects/Contact/validationRules/Mandatory_For_marking_communicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_For_marking_communicable</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Phone) || ISBLANK(Email)  || ISBLANK( TEXT(Designation_Oppor__c) ) ||  ISBLANK(  Designation__c )) &amp;&amp; Is_Communicable__c</errorConditionFormula>
    <errorMessage>Please fill Primary Mobile,Email,Department and Designation!</errorMessage>
</ValidationRule>