foundation-objs/main/default/objects/Contact/validationRules/Mobile_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(  Phone )),
NOT(REGEX( Phone , &quot;[0-9]{10}&quot;)),
Account_Record_Type__c &lt;&gt; &apos;International&apos; 
)</errorConditionFormula>
    <errorMessage>Enter valid 10 digit Mobile Number</errorMessage>
</ValidationRule>