foundation-objs/main/default/objects/Contact/validationRules/Restrict_Is_Communicable_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Is_Communicable_Update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Is_Communicable__c) &amp;&amp; Is_Communicable__c = False</errorConditionFormula>
    <errorMessage>You don&apos;t have access to update Is Communicable.</errorMessage>
</ValidationRule>